compiler/testData/compileKotlinAgainstCustomBinaries/usageOfNestedTypeAliasesWhenTheyAreNotStable/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/usageOfNestedTypeAliasesWhenTheyAreNotStable/source.kt:1:20: error: the feature "nested type aliases" is only available since language version 2.3
fun test(nestedTA: C.NestedTA): D {
                   ^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/usageOfNestedTypeAliasesWhenTheyAreNotStable/source.kt:2:14: error: the feature "nested type aliases" is only available since language version 2.3
    return C.NestedTA()
             ^^^^^^^^
COMPILATION_ERROR
